--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "transport_subscriptions_native",
+  "name": "receptoff",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,15 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
+    "dns": "^0.2.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "os": "^0.1.2",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-network-info": "^5.2.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-redux": "^9.0.4",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
